# haha-gemm

./: .gitignore  README.md  temp.md
app/: CMakeLists.txt  build.gradle  compile_commands.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml  app-release.jks
app/src/main/assets/: OpenCLFirstApp_kernel.cl  gemm_naive.cl  gemm_tiling.cl  gemm_tiling_2.cl  gemm_tiling_vec_4x8.cl  gemm_tiling_vec_a_as_image_8x8.cl  gemm_tiling_vec_all_image_4x8.cl  gemm_tiling_vec_image_4x4.cl  gemm_tiling_vec_image_4x8.cl  gemm_tiling_vec_image_4x8_prefetch.cl  gemm_tiling_vec_image_a_packed_8x8.cl  gemm_tiling_vec_image_int_4x8.cl  gemm_tiling_vec_image_unrolling_4x8.cl  vector_sum_kernel.cl  vector_sum_kernel_int.cl
app/src/main/cpp/: README  blksize.h  cl-demo.cc  cl-demo.h  log-streambuffer.cc  log-streambuffer.h  native-lib.cc  pack.S  result-checker.cc  result-checker.h  sgemm-O1.cc  sgemm-O2.cc  sgemm-O3-omp.cc  sgemm-O3.cc  sgemm-kernel-4x4-pld.S  sgemm-kernel-intrinsic.cc  sgemm-kernel-neon-4x4.S  sgemm-kernel-unrolling-4x8.S  sgemm-kernel-unrolling-O1-4x6-O2-pld.S  sgemm-kernel-unrolling-O1-4x6-O2-slow.S  sgemm-kernel-unrolling-O1-4x6-O2.S  sgemm-kernel-unrolling-O1-4x6.S  sgemm-kernel-unrolling-O1.S  sgemm-kernel-unrolling-O2.S  sgemm-kernel-unrolling-O3.S  sgemm-kernel-unrolling.S  sgemm-kernel.cc  sgemm-kernel.s  sgemm-unrolling-kernel-O1.cc  sgemm-unrolling-kernel-O2.cc  sgemm.cc  sgemm.h  test-data-factory.cc  test-data-factory.h  utils.cc  utils.h  verify-mat.py
app/src/main/cpp/base/: Contsnts.h  DataGenerator.cpp  DataGenerator.h  LogUtil.cpp  LogUtil.h  PerfUtil.cpp  PerfUtil.h
app/src/main/cpp/cl/: CLEngine.cpp  CLEngine.h  GEMM.cpp  GEMM.h  GEMM2.h  GEMM3.h  GEMM4.h  MatTranspose.cpp  MatTranspose.h  PackHelper.h  VectorSum.cpp  VectorSum.h
app/src/main/cpp/include/: common.h
app/src/main/java/com/haha/gemm/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
test-data/: log  real_perf.data  time.data
